--- a/index.html
+++ b/index.html
@@ -5,149 +5,173 @@
     <title>InsightMinter | Strategic Analytics & AI Advisory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Corporate Font -->
+    <!-- Professional Typography -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
         :root {
-            --primary-blue: #0A1F44;
-            --accent-teal: #14B8A6;
-            --dark-bg: #0F172A;
-            --card-bg: #1E293B;
-            --light-text: #E2E8F0;
-            --muted-text: #94A3B8;
+            --black: #000000;
+            --white: #ffffff;
+            --accent: #14B8A6;
+            --gray: #666666;
+            --light-gray: #f2f2f2;
         }
 
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(to bottom, #0F172A, #111827);
-            color: var(--light-text);
+            background: var(--white);
+            color: var(--black);
+            line-height: 1.6;
         }
 
         header {
-            background: var(--primary-blue);
-            padding: 50px 20px;
-            text-align: center;
-            border-bottom: 2px solid var(--accent-teal);
-        }
-
-        .logo-container {
+            padding: 30px 10%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            gap: 15px;
+            border-bottom: 1px solid #e5e5e5;
         }
 
         .logo {
-            height: 60px;
+            height: 40px;
         }
 
-        header h1 {
-            margin: 0;
+        .brand-name {
             font-weight: 600;
-            font-size: 34px;
-            color: white;
+            font-size: 18px;
+            color: var(--accent);
+            margin-left: 10px;
         }
 
-        header p {
-            margin-top: 10px;
-            color: var(--muted-text);
-            font-size: 16px;
+        .brand {
+            display: flex;
+            align-items: center;
         }
 
-        section {
-            padding: 70px 20px;
-            max-width: 1100px;
-            margin: auto;
+        nav a {
+            text-decoration: none;
+            color: var(--black);
+            margin-left: 25px;
+            font-weight: 500;
+            font-size: 14px;
         }
 
-        h2 {
-            font-weight: 600;
-            margin-bottom: 30px;
-            border-left: 4px solid var(--accent-teal);
-            padding-left: 12px;
-        }
-
-        .card {
-            background: var(--card-bg);
-            padding: 25px;
-            margin: 20px 0;
-            border-radius: 8px;
-            border-left: 4px solid var(--accent-teal);
-            transition: 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-        }
-
-        .card h3 {
-            margin-top: 0;
-            font-weight: 600;
+        nav a:hover {
+            color: var(--accent);
         }
 
         .hero {
-            text-align: center;
-            padding: 100px 20px 60px 20px;
+            padding: 120px 10%;
+            max-width: 900px;
         }
 
-        .hero h2 {
-            font-size: 38px;
-            border: none;
-            padding: 0;
+        .hero h1 {
+            font-size: 48px;
+            font-weight: 600;
+            margin-bottom: 20px;
         }
 
         .hero p {
-            color: var(--muted-text);
+            font-size: 20px;
+            color: var(--gray);
             max-width: 700px;
-            margin: 20px auto;
+        }
+
+        .section {
+            padding: 100px 10%;
+            border-top: 1px solid #f0f0f0;
+        }
+
+        .section h2 {
+            font-size: 28px;
+            margin-bottom: 40px;
+        }
+
+        .services {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 40px;
+        }
+
+        .service-item h3 {
             font-size: 18px;
+            margin-bottom: 10px;
+        }
+
+        .service-item p {
+            color: var(--gray);
+            font-size: 15px;
+        }
+
+        .contact-section {
+            background: var(--light-gray);
+        }
+
+        form {
+            max-width: 600px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        input, textarea, select {
+            padding: 12px;
+            border: 1px solid #cccccc;
+            font-family: 'Inter', sans-serif;
+            font-size: 14px;
+            background: var(--white);
+        }
+
+        input:focus, textarea:focus, select:focus {
+            outline: none;
+            border-color: var(--accent);
         }
 
         button {
-            background: var(--accent-teal);
-            color: #0F172A;
+            padding: 14px;
+            background: var(--black);
+            color: var(--white);
             border: none;
-            padding: 12px 25px;
-            border-radius: 6px;
-            font-weight: 600;
+            font-weight: 500;
             cursor: pointer;
             transition: 0.3s ease;
         }
 
         button:hover {
-            background: #0D9488;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            max-width: 600px;
-        }
-
-        input, textarea, select {
-            padding: 12px;
-            border-radius: 6px;
-            border: 1px solid #334155;
-            background-color: #1E293B;
-            color: white;
-            font-family: 'Inter', sans-serif;
+            background: var(--accent);
         }
 
         footer {
-            text-align: center;
-            padding: 20px;
-            background: var(--primary-blue);
-            color: var(--muted-text);
-            border-top: 1px solid var(--accent-teal);
+            padding: 40px 10%;
+            font-size: 14px;
+            color: var(--gray);
+            border-top: 1px solid #e5e5e5;
         }
 
         @media (max-width: 768px) {
-            .hero h2 {
-                font-size: 28px;
+            .hero h1 {
+                font-size: 32px;
+            }
+
+            .hero p {
+                font-size: 18px;
+            }
+
+            header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 15px;
+            }
+
+            nav {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+            nav a {
+                margin-left: 0;
+                margin-right: 15px;
             }
         }
     </style>
@@ -156,54 +180,68 @@
 <body>
 
 <header>
-    <div class="logo-container">
+    <div class="brand">
         <img src="logo.png" alt="InsightMinter Logo" class="logo">
-        <h1>InsightMinter</h1>
+        <div class="brand-name">InsightMinter</div>
     </div>
-    <p>Strategic Analytics & AI Solutions for European SMEs</p>
+    <nav>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </nav>
 </header>
 
 <section class="hero">
-    <h2>Turning Data into Strategic Advantage</h2>
+    <h1>Data-Driven Strategy for European SMEs</h1>
     <p>
-        InsightMinter helps small and medium enterprises across Europe leverage
-        business analytics, forecasting, and AI automation to scale efficiently,
-        reduce operational inefficiencies, and improve financial clarity.
+        InsightMinter partners with small and medium enterprises across Europe
+        to deliver structured analytics, financial clarity, and AI-enabled
+        operational transformation.
     </p>
-    <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
-        Request Consultation
-    </button>
 </section>
 
-<section>
-    <h2>Our Services</h2>
+<section id="services" class="section">
+    <h2>Services</h2>
 
-    <div class="card">
-        <h3>Business Analytics</h3>
-        <p>Structured KPI frameworks, dashboarding, and operational analytics for SME decision-makers.</p>
+    <div class="services">
+
+        <div class="service-item">
+            <h3>Business Analytics</h3>
+            <p>
+                KPI frameworks, executive dashboards, and operational insights
+                to enable structured decision-making.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <h3>Financial Planning & Forecasting</h3>
+            <p>
+                Budgeting systems, scenario modeling, revenue forecasting,
+                and performance monitoring for sustainable growth.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <h3>AI & Process Automation</h3>
+            <p>
+                Data-backed automation strategies to eliminate inefficiencies
+                and improve scalability.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <h3>Churn & Sales Forecasting</h3>
+            <p>
+                Predictive modeling to improve retention, enhance pipeline
+                visibility, and strengthen revenue planning.
+            </p>
+        </div>
+
     </div>
-
-    <div class="card">
-        <h3>Financial Planning & Forecasting</h3>
-        <p>Revenue projections, cost modeling, budgeting systems, and scenario analysis tailored for SMEs.</p>
-    </div>
-
-    <div class="card">
-        <h3>AI & Process Automation</h3>
-        <p>Data-driven automation solutions to streamline repetitive workflows and improve efficiency.</p>
-    </div>
-
-    <div class="card">
-        <h3>Churn Prediction & Sales Forecasting</h3>
-        <p>Predictive modeling to improve customer retention and optimize sales performance.</p>
-    </div>
-
 </section>
 
-<section id="contact">
+<section id="contact" class="section contact-section">
     <h2>Request Consultation</h2>
 
-    <!-- Replace action with Formspree / Netlify form endpoint later -->
     <form action="#" method="POST">
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Business Email" required>
@@ -213,10 +251,10 @@
             <option>Business Analytics</option>
             <option>Financial Planning & Forecasting</option>
             <option>AI & Process Automation</option>
-            <option>Churn Prediction & Sales Forecasting</option>
+            <option>Churn & Sales Forecasting</option>
         </select>
 
-        <textarea name="message" rows="4" placeholder="Briefly describe your business requirement"></textarea>
+        <textarea name="message" rows="4" placeholder="Briefly describe your requirement"></textarea>
 
         <button type="submit">Submit Request</button>
     </form>
